# speexdsp-1

./: .gitignore  CMakeLists.txt
demo/: CMakeLists.txt  testecho.c
libspeexdsp/: CMakeLists.txt  config.h
